uploads and copy old theme

--- a/public/app/themes/sage-theme/resources/assets/styles/common/_global.scss
+++ b/public/app/themes/sage-theme/resources/assets/styles/common/_global.scss
@@ -2,5 +2,12 @@ body,html {
     max-width:100%;
     overflow-x:hidden;
     background:blue;
+    position:relative;
 }
 
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
