--- a/public/app/themes/sage-theme/resources/assets/styles/layouts/_header.scss
+++ b/public/app/themes/sage-theme/resources/assets/styles/layouts/_header.scss
@@ -1,2 +1,43 @@
-// TODO: .banner .nav li {}
-// TODO: .banner .nav a {}
+.Header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 2000;
+    background: $white;
+    transition: .5s;
+    opacity: 1;
+    overflow: hidden;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+    .Header-logo {
+        max-width: 200px;
+        padding-top: 15px;
+        padding-bottom: 15px;
+    }
+    .menu-main-container {
+        list-style-type: none;
+        li {
+            display: inline-block;
+            margin-top: 20px;
+            &:last-child {
+                a {
+                    padding-right: 0;
+                }
+            }
+            &.current_page_item {
+                a {
+                    opacity: .65;
+                }
+            }
+            a {
+                font-family: $heading;
+                font-size: 24px;
+                color: $green;
+                padding: 0 20px;
+                &:hover {
+                    opacity: .65;
+                }
+            }
+        }
+    }
+}
