--- a/public/app/themes/sage-theme/resources/assets/styles/layouts/_header.scss
+++ b/public/app/themes/sage-theme/resources/assets/styles/layouts/_header.scss
@@ -9,13 +9,37 @@
     opacity: 1;
     overflow: hidden;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+    @include mobile {
+        height:80px;
+    }
     .Header-logo {
         max-width: 200px;
         padding-top: 15px;
         padding-bottom: 15px;
+        @include mobile {
+            max-width:115px;
+        }
+    }
+    .row .column-25{
+        @include mobile {
+            flex: 0 0 100%;
+            max-width: 100%;
+        }
+    }
+    .row .column-75{
+        @include mobile {
+            flex: 0 0 100%;
+            max-width: 100%;
+        }
+    }
+    .menu {
+        @include mobile {
+            margin:0;
+        }
     }
     .menu-main-container {
         list-style-type: none;
+        
         li {
             display: inline-block;
             &:last-child {
