--- a/public/app/themes/sage-theme/resources/assets/styles/common/_grid.scss
+++ b/public/app/themes/sage-theme/resources/assets/styles/common/_grid.scss
@@ -19,6 +19,7 @@
   flex-direction: column;
   padding: 0;
   width: 100%;
+  flex-wrap: wrap;
   &.row-no-padding {
     padding: 0;
     &>.column {
@@ -29,6 +30,9 @@
     flex-wrap: wrap;
   } // Vertically Align Columns
   // .row-* vertically aligns every .col in the .row
+  &.row-nowrap {
+    flex-wrap:nowrap;
+  }
   &.row-top {
     align-items: flex-start;
   }
