--- a/public/app/themes/sage-theme/resources/assets/styles/layouts/_content.scss
+++ b/public/app/themes/sage-theme/resources/assets/styles/layouts/_content.scss
@@ -11,8 +11,26 @@
             font-size:20px;
         }
     }
-    padding-top:30px;
-    padding-bottom:30px; 
+    img {
+        box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+    }
+    padding-top:50px;
+    padding-bottom:50px; 
+    @include mobile {
+        padding-top:20px;
+        padding-bottom:20px;
+    }
+    .column {
+        @include phone {
+            max-width:100% !important;
+            flex: 0 0 100% !important;
+        }
+    }
+    .column-33 {
+        @include phone {
+            margin-top:20px;
+        }
+    }
     img {
         @include mobile {
             max-width:500px;
