--- a/public/app/themes/sage-theme/resources/assets/styles/layouts/_doubleCta.scss
+++ b/public/app/themes/sage-theme/resources/assets/styles/layouts/_doubleCta.scss
@@ -4,12 +4,21 @@
     .DoubleCta-card {
         border:2px solid $green;
         padding:50px 125px;
+        box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+        @include phone {
+            padding:25px;
+        }
         h3 {
             color:$green;
             margin-bottom:30px;
         }
     }
     .column {
+        @include phone {
+            flex: 0 0 100% !important;
+            max-width:100% !important;
+            margin-top:20px;
+        }
         &:nth-of-type(even) {
             .DoubleCta-card {
                 border-color:$orange;
