--- a/public/app/themes/sage-theme/resources/assets/styles/layouts/_hero.scss
+++ b/public/app/themes/sage-theme/resources/assets/styles/layouts/_hero.scss
@@ -8,7 +8,8 @@
     padding:100px;
     background-position:center center;
     @include mobile {
-        min-height:240px;
+        height:300px;
+        padding:50px;
     }
     &:before {
         width:100%;
