--- a/public/app/themes/sage-theme/resources/assets/styles/layouts/_content.scss
+++ b/public/app/themes/sage-theme/resources/assets/styles/layouts/_content.scss
@@ -13,6 +13,8 @@
     }
     img {
         box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+        margin-top: 3px;
+        margin-bottom: 5px;
     }
     padding-top:50px;
     padding-bottom:50px; 
