--- a/public/app/themes/sage-theme/resources/assets/styles/layouts/_doubleCta.scss
+++ b/public/app/themes/sage-theme/resources/assets/styles/layouts/_doubleCta.scss
@@ -5,6 +5,8 @@
         border:2px solid $green;
         padding:50px 125px;
         box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+        margin-bottom:5px;
+        margin-top:3px;
         @include phone {
             padding:25px;
         }
