--- a/public/app/themes/sage-theme/resources/assets/styles/layouts/_trackedGift.scss
+++ b/public/app/themes/sage-theme/resources/assets/styles/layouts/_trackedGift.scss
@@ -11,6 +11,13 @@
             color:$black;
         }
     }
+    .row .column-50 {
+
+        @include tablet {
+            flex: 0 0 100%;
+            max-width: 100%;
+        }
+    }
     .TrackedGift-container {
         margin:0 auto;
         display:block;
