--- a/public/app/themes/sage-theme/resources/assets/styles/layouts/_banner.scss
+++ b/public/app/themes/sage-theme/resources/assets/styles/layouts/_banner.scss
@@ -7,6 +7,10 @@
     h3 {
         margin-bottom:0;
         margin-top:0;
+        font-size:42px;
+        @include mobile {
+            font-size:24px;
+        }
     }
     .Container {
         border:2px solid $purple;
@@ -14,6 +18,7 @@
         padding:20px 40px;
         transition:.25s;
         box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+        text-align:center;
         &:hover {
             background:$purple;
             color:$white;
