--- a/public/app/themes/sage-theme/resources/assets/styles/layouts/_trackedGifts.scss
+++ b/public/app/themes/sage-theme/resources/assets/styles/layouts/_trackedGifts.scss
@@ -9,6 +9,18 @@
   .TrackedGifts-bottom {
     padding: 15px;
   }
+  .row .column-33 {
+    @include mobile {
+        flex: 0 0 50%;
+        max-width: 50%;
+        margin-top:10px;
+        margin-bottom:10px;
+    }
+    @include phone {
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+}
   h2 {
     font-size: 28px;
   }
@@ -18,6 +30,7 @@
     transition: .25s;
   }
   .column {
+      display:flex;
       &:hover {
         opacity: 1;
       }
@@ -25,6 +38,7 @@
   .TrackedGifts-item {
     padding: 0;
     background: $grey;
+    width:100%;
     &:hover {
       opacity: 1;
       .TrackedGifts-bottom {
