--- a/public/app/themes/sage-theme/resources/assets/styles/layouts/_hero.scss
+++ b/public/app/themes/sage-theme/resources/assets/styles/layouts/_hero.scss
@@ -11,6 +11,9 @@
         height:300px;
         padding:50px;
     }
+    &.Hero-off {
+        opacity:0;
+    }
     &:before {
         width:100%;
         height:100%;
