--- a/public/app/themes/sage-theme/resources/assets/styles/layouts/_banner.scss
+++ b/public/app/themes/sage-theme/resources/assets/styles/layouts/_banner.scss
@@ -16,7 +16,7 @@
         border:2px solid $purple;
         display:block;
         padding:20px 40px;
-        transition:.25s;
+        transition:.25s background;
         box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
         text-align:center;
         &:hover {
