--- a/public/app/themes/sage-theme/resources/assets/styles/components/_utilities.scss
+++ b/public/app/themes/sage-theme/resources/assets/styles/components/_utilities.scss
@@ -233,3 +233,6 @@ img {
 .wc-proceed-to-checkout a.checkout-button {
     font-size:15px !important;
 }
+.woocommerce .button {
+    font-size:15px !important;
+}
