--- a/public/app/themes/sage-theme/resources/assets/styles/components/_utilities.scss
+++ b/public/app/themes/sage-theme/resources/assets/styles/components/_utilities.scss
@@ -236,3 +236,7 @@ img {
 .woocommerce .button {
     font-size:15px !important;
 }
+
+.woocommerce-cart table.cart td.actions .coupon .input-text {
+    width:200px;
+}
